# rat-trig-simple

./: .clang-tidy  .cmake-format  .gitignore  AGENTS.md  CMakeLists.txt  Doxyfile  xmake.lua
.github/workflows/: cmake.yml  release.yml  xmake.yml
cmake/: CPM.cmake
include/rattrig/: geometry.hpp  rattrig.hpp  validation.hpp
tests/: benchmark_rattrig.cpp  test_rattrig.cpp
